# podpiped-python

./: .gitignore  main.py  pyproject.toml
podpiped/: client.py  feedgen.py  models.py  podcast_builder.py  sample_podcast.py
tests/: test_feedgen.py  test_models.py  test_podcast_builder.py
