[tool.poetry]
name = "podpiped"
version = "0.1.0"
description = ""
authors = ["robertkleinschuster <github@robs.social>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic = "^2.8.2"
feedgen = "^1.0.0"
requests = "^2.32.3"
requests-cache = "^1.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
